Fix alignment of loading

--- a/style.css
+++ b/style.css
@@ -272,7 +272,7 @@ body {
 .wrapper2 {
   display: flex;
   justify-content: center;
-  margin-right: 36px
+  margin-right: 39px
 }
 
 .fruitwrapper {
